<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="timer"
            type="com.example.timerapp.database.Timer" />

        <variable
            name="clickListener"
            type="com.example.timerapp.adapter.DeleteTimerListListener" />


    </data>

    <LinearLayout
        android:id="@+id/simple_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/card_margin"
            android:layout_marginTop="@dimen/standard_margin"
            android:layout_marginRight="@dimen/card_margin"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{() -> clickListener.onClick(timer)}"
            app:selectedColor="@{timer.isSelected}"
            app:cardCornerRadius="8dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/top_topic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/card_padding">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/delete_simple_timer_name"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:text="@{timer.name}"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                            tools:text="基本情報技術者午後試験" />

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            app:selectedImage="@{timer.isSelected}"/>



                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/standard_margin"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/delete_simple_total_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                            app:totalTime="@{timer.total}"
                            tools:text="計  2時間30分" />

                        <ImageView
                            android:id="@+id/delete_simple_notification_type"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/icon_margin"
                            android:layout_marginEnd="@dimen/standard_margin"
                            app:notificationType="@{timer.notificationType}"
                            app:timerDetail="@{timer.detail}"
                            tools:src="@drawable/ic_vibration" />

                        <TextView
                            android:id="@+id/delete_simple_detail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:timerDetail="@{timer.detail}"
                            android:drawablePadding="@dimen/icon_padding"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                            tools:text="通知 : 10分前" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>
</layout>