<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.timerapp.ui.deletePresetTimerList.DeletePresetTimerListViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.deletePresetTimerList.DeletePresetTimerListFragment">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/delete_preset_timer_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/btn_margin"
            android:scrollbars="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/preset_cancel_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/preset_cancel_btn"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/btn_margin"
            android:text="@string/cancel"
            android:textStyle="bold"
            android:onClick="@{() -> viewModel.cancelDeletePresetTimerList()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/preset_delete_btn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/preset_delete_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/btn_margin"
            android:text="@string/delete"
            android:textStyle="bold"
            android:onClick="@{() -> viewModel.deletePresetTimerList()}"
            app:layout_constraintBaseline_toBaselineOf="@+id/preset_cancel_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/preset_cancel_btn" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>